Move nav code, update API
The navbar code is now in an _includes file instead of on each page.

`genome` and `suffix` specifiers have been removed from pages, as there is now only one version of each page. Likewise, `genome` has been removed from API arguments.
