# openapi.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.0
 info:
   title: RatGTEx REST API
-  version: '2.0.0'
-  description: This API provides data for the visualizations in the RatGTEx data portal. This version (v2) provides data for both rn6 (Rnor_6.0) and rn7 (mRatBN7.2) genome assemblies.
+  version: '3.0.0'
+  description: This API provides data for the visualizations in the RatGTEx data portal. This version (v3) provides data for RatGTEx data release v3, which uses the rn7 (mRatBN7.2) genome assembly.
   contact:
     name: Daniel Munro
     x-role: responsible developer
@@ -10,7 +10,7 @@ info:
     url: https://danmun.ro
     x-id: https://danmun.ro
 servers:
-- url: https://ratgtex.org/api/v2
+- url: https://ratgtex.org/api/v3
   description: RatGTEx data portal
 tags:
 - name: reference
@@ -30,20 +30,11 @@ paths:
       parameters:
       - name: geneId
         in: query
-        description: Ensembl gene ID
+        description: Gene ID
         required: true
         schema:
           type: string
-          example: ENSRNOG00000021424
-        x-valueType: https://identifiers.org/ensembl
-      - name: genome
-        in: query
-        description: Genome build (rn6 or rn7)
-        required: true
-        schema:
-          type: string
-          enum: [rn6, rn7]
-          example: rn6
+          example: Cd300lf
       - name: tissueSiteDetailId
         in: query
         description: Tissue ID
@@ -75,9 +66,6 @@ paths:
                       type: number
                     example: [-1.11134883833383, -0.314562734207873, 0.556543703618366, 0.522265760640944]
                   geneId:
-                    type: string
-                    example: ENSRNOG00000021424
-                  geneSymbol:
                     type: string
                     example: Cd300lf
                   genotypes:
@@ -112,9 +100,6 @@ paths:
                   variantId:
                     type: string
                     example: chr10:104362850
-          x-responseValueType:
-          - x-path: geneId
-            x-valueType: https://identifiers.org/ensembl
   /eqtl:
     get:
       tags:
@@ -123,20 +108,11 @@ paths:
       parameters:
       - name: geneId
         in: query
-        description: Ensembl gene ID
+        description: Gene ID
         required: true
         schema:
           type: string
-          example: ENSRNOG00000021424
-        x-valueType: https://identifiers.org/ensembl
-      - name: genome
-        in: query
-        description: Genome build (rn6 or rn7)
-        required: true
-        schema:
-          type: string
-          enum: [rn6, rn7]
-          example: rn6
+          example: Cd300lf
       responses:
         '200':
           description: Success
@@ -155,9 +131,6 @@ paths:
                           example: T
                         geneId:
                           type: string
-                          example: ENSRNOG00000021424
-                        geneSymbol:
-                          type: string
                           example: Cd300lf
                         log2_aFC:
                           type: number
@@ -174,9 +147,6 @@ paths:
                         variantId:
                           type: string
                           example: chr10:104378687
-          x-responseValueType:
-          - x-path: eqtl[0].geneId
-            x-valueType: https://identifiers.org/ensembl
   /exon:
     get:
       tags:
@@ -185,20 +155,11 @@ paths:
       parameters:
       - name: geneId
         in: query
-        description: Ensembl gene ID
+        description: Gene ID
         required: true
         schema:
           type: string
-          example: ENSRNOG00000021424
-        x-valueType: https://identifiers.org/ensembl
-      - name: genome
-        in: query
-        description: Genome build (rn6 or rn7)
-        required: true
-        schema:
-          type: string
-          enum: [rn6, rn7]
-          example: rn6
+          example: Cd300lf
       responses:
         '200':
           description: Success
@@ -214,13 +175,13 @@ paths:
                       properties:
                         chromosome:
                           type: string
-                          example: "10"
+                          example: chr1
                         end:
                           type: integer
                           example: 103687425
                         exonId:
                           type: string
-                          example: ENSRNOG00000021424_1
+                          example: Cd300lf_1
                         exonNumber:
                           type: integer
                           example: 1
@@ -228,9 +189,6 @@ paths:
                           type: string
                           example: exon
                         geneId:
-                          type: string
-                          example: ENSRNOG00000021424
-                        geneSymbol:
                           type: string
                           example: Cd300lf
                         start:
@@ -242,12 +200,7 @@ paths:
                           example: '-'
                         transcriptId:
                           type: string
-                          example: ENSRNOG00000021424
-          x-responseValueType:
-          - x-path: exon[0].geneId
-            x-valueType: https://identifiers.org/ensembl
-          - x-path: transcriptId
-            x-valueType: https://identifiers.org/ensembl
+                          example: Cd300lf
   /gene:
     get:
       tags:
@@ -256,24 +209,15 @@ paths:
       parameters:
       - name: geneId
         in: query
-        description: One or more Ensembl gene IDs or gene symbols (they can be mixed)
+        description: One or more gene IDs
         required: true
         schema:
           type: array
           items:
             type: string
-          example: [ENSRNOG00000021424, Eno1]
+          example: [Cd300lf, Eno1]
         style: form
         explode: false
-        x-valueType: https://identifiers.org/ensembl
-      - name: genome
-        in: query
-        description: Genome build (rn6 or rn7)
-        required: true
-        schema:
-          type: string
-          enum: [rn6, rn7]
-          example: rn6
       responses:
         '200':
           description: Success
@@ -289,7 +233,7 @@ paths:
                       properties:
                         chromosome:
                           type: string
-                          example: '10'
+                          example: chr1
                         description:
                           type: string
                           example: Cd300 molecule-like family member F
@@ -324,9 +268,6 @@ paths:
                                 example: true
                         geneId:
                           type: string
-                          example: ENSRNOG00000021424
-                        geneSymbol:
-                          type: string
                           example: Cd300lf
                         hasEqtl:
                           type: boolean
@@ -340,9 +281,6 @@ paths:
                         tss:
                           type: integer
                           example: 103687425
-          x-responseValueType:
-          - x-path: gene[0].geneId
-            x-valueType: https://identifiers.org/ensembl
   /ld:
     get:
       tags:
@@ -351,20 +289,11 @@ paths:
       parameters:
       - name: geneId
         in: query
-        description: Ensembl gene ID
+        description: Gene ID
         required: true
         schema:
           type: string
-          example: ENSRNOG00000021424
-        x-valueType: https://identifiers.org/ensembl
-      - name: genome
-        in: query
-        description: Genome build (rn6 or rn7)
-        required: true
-        schema:
-          type: string
-          enum: [rn6, rn7]
-          example: rn6
+          example: Cd300lf
       responses:
         '200':
           description: Success
@@ -387,24 +316,15 @@ paths:
       parameters:
       - name: geneId
         in: query
-        description: One or more Ensembl gene IDs.
+        description: One or more gene IDs.
         required: true
         schema:
           type: array
           items:
             type: string
-          example: [ENSRNOG00000017843, ENSRNOG00000027513, ENSRNOG00000017895]
+          example: [Polr3k, Rtel1, Eno1]
         style: form
         explode: false
-        x-valueType: https://identifiers.org/ensembl
-      - name: genome
-        in: query
-        description: Genome build (rn6 or rn7)
-        required: true
-        schema:
-          type: string
-          enum: [rn6, rn7]
-          example: rn6
       - name: tissueSiteDetailId
         in: query
         description: One or more tissue IDs. If omitted, all tissues are included.
@@ -429,7 +349,7 @@ paths:
                     properties:
                       gene:
                         type: string
-                        example: '((ENSRNOG00000027513:209.196,ENSRNOG00000017843:209.196):759.14,ENSRNOG00000017895:968.336);'
+                        example: '((Polr3k:209.196,Rtel1:209.196):759.14,Eno1:968.336);'
                       tissue:
                         type: string
                         example: '((IL:34.6518,LHb:34.6518):191.47,NAcc:226.121);'
@@ -440,19 +360,13 @@ paths:
                       properties:
                         geneId:
                           type: string
-                          example: ENSRNOG00000017843
-                        geneSymbol:
-                          type: string
-                          example: Polr3k
+                          example: Rtel1
                         median:
                           type: number
                           example: 134.87
                         tissueSiteDetailId:
                           type: string
                           example: IL
-          x-responseValueType:
-          - x-path: medianGeneExpression[0].geneId
-            x-valueType: https://identifiers.org/ensembl
   /singleTissueEqtl:
     get:
       tags:
@@ -461,20 +375,11 @@ paths:
       parameters:
       - name: geneId
         in: query
-        description: Ensembl gene ID
+        description: Gene ID
         required: true
         schema:
           type: string
-          example: ENSRNOG00000016560
-        x-valueType: https://identifiers.org/ensembl
-      - name: genome
-        in: query
-        description: Genome build (rn6 or rn7)
-        required: true
-        schema:
-          type: string
-          enum: [rn6, rn7]
-          example: rn6
+          example: Card19
       responses:
         '200':
           description: Success
@@ -490,14 +395,8 @@ paths:
                       properties:
                         chromosome:
                           type: string
-                          example: '17'
+                          example: chr1
                         geneId:
-                          type: string
-                          example: ENSRNOG00000016560
-                        geneSymbol:
-                          type: string
-                          example: Card19
-                        geneSymbolUpper:
                           type: string
                           example: Card19
                         nes:
@@ -515,9 +414,6 @@ paths:
                         variantId:
                           type: string
                           example: chr17:15221388
-          x-responseValueType:
-          - x-path: singleTissueEqtl[0].geneId
-            x-valueType: https://identifiers.org/ensembl
   /sqtl:
     get:
       tags:
@@ -526,20 +422,11 @@ paths:
       parameters:
       - name: geneId
         in: query
-        description: Ensembl gene ID
+        description: Gene ID
         required: true
         schema:
           type: string
-          example: ENSRNOG00000021424
-        x-valueType: https://identifiers.org/ensembl
-      - name: genome
-        in: query
-        description: Genome build (rn6 or rn7)
-        required: true
-        schema:
-          type: string
-          enum: [rn6, rn7]
-          example: rn6
+          example: Cd300lf
       responses:
         '200':
           description: Success
@@ -558,13 +445,10 @@ paths:
                           example: T
                         geneId:
                           type: string
-                          example: ENSRNOG00000021424
-                        geneSymbol:
-                          type: string
                           example: Cd300lf
                         phenotypeId:
                           type: string
-                          example: 10:103673824:103677398:clu_5465_-:ENSRNOG00000021424
+                          example: chr10:103673824:103677398:clu_5465_-:Cd300lf
                         pval_beta:
                           type: number
                           example: 0.000715545
@@ -577,23 +461,11 @@ paths:
                         variantId:
                           type: string
                           example: chr10:104378687
-          x-responseValueType:
-          - x-path: sqtl[0].geneId
-            x-valueType: https://identifiers.org/ensembl
   /tissueInfo:
     get:
       tags:
       - reference
       description: Fetch metadata for all tissues
-      parameters:
-      - name: genome
-        in: query
-        description: Genome build (rn6 or rn7)
-        required: true
-        schema:
-          type: string
-          enum: [rn6, rn7]
-          example: rn6
       responses:
         '200':
           description: Success
@@ -615,10 +487,10 @@ paths:
                           example: '55,126,184'
                         dataset:
                           type: string
-                          example: IL_LHb_NAcc_OFC_PL
+                          example: ratgtex_v3_round10_5
                         datasetId:
                           type: string
-                          example: ratgtex_v1
+                          example: ratgtex_v3
                         eGeneCount:
                           type: integer
                           example: 3949
@@ -659,14 +531,6 @@ paths:
         schema:
           type: boolean
           example: true
-      - name: genome
-        in: query
-        description: Genome build (rn6 or rn7)
-        required: true
-        schema:
-          type: string
-          enum: [rn6, rn7]
-          example: rn6
       - name: tissueSiteDetailId
         in: query
         description: Tissue ID
@@ -689,11 +553,8 @@ paths:
                       properties:
                         datasetId:
                           type: string
-                          example: ratgtex_v1
+                          example: ratgtex_v3
                         geneId:
-                          type: string
-                          example: ENSRNOG00000030478
-                        geneSymbol:
                           type: string
                           example: AY172581.9
                         median:
@@ -706,23 +567,12 @@ paths:
                           type: string
                           enum: [TPM]
                           example: TPM
-          x-responseValueType:
-          - x-path: topExpressedGene[0].geneId
-            x-valueType: https://identifiers.org/ensembl
   /variant:
     get:
       tags:
       - reference
       description: Fetch information for one or more variants
       parameters:
-      - name: genome
-        in: query
-        description: Genome build (rn6 or rn7)
-        required: true
-        schema:
-          type: string
-          enum: [rn6, rn7]
-          example: rn6
       - name: variantId
         in: query
         description: Variant ID
@@ -752,7 +602,7 @@ paths:
                           example: A
                         chromosome:
                           type: string
-                          example: '1'
+                          example: chr1
                         pos:
                           type: integer
                           example: 1675342
